[project]
name = "escrowmint"
version = "0.3.3"
description = "Python client for exact Redis-backed bounded consumption."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Biprakanta Pal", email = "biprakanta.pal@gmail.com" },
]
dependencies = [
    "redis>=6,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=escrowmint --cov-report=term-missing --cov-fail-under=90"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "pytest-cov>=5,<6",
    "ruff>=0.15.11",
]

[tool.ruff]
target-version = "py38"
