[project]
name = "escrowmint"
version = "0.5.0"
description = "Redis-backed bounded quota primitives for prepaid credits, reservations, top-ups, and chunk leases."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Biprakanta Pal", email = "biprakanta.pal@gmail.com" },
]
keywords = [
    "distributed-systems",
    "idempotency",
    "prepaid",
    "quota",
    "redis",
    "reservation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "redis>=6,<7",
]

[project.urls]
Blog = "https://transit.hashnode.dev/designing-a-bounded-quota-system-for-prepaid-api-credits"
Changelog = "https://github.com/biprakanta/escrowmint-py/blob/main/CHANGELOG.md"
Documentation = "https://github.com/biprakanta/escrowmint-py#readme"
Issues = "https://github.com/biprakanta/escrowmint-py/issues"
Source = "https://github.com/biprakanta/escrowmint-py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=escrowmint --cov-report=term-missing --cov-fail-under=90"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "pytest-cov>=5,<6",
    "ruff>=0.15.11",
]

[tool.ruff]
target-version = "py38"
